--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -24,7 +24,7 @@ fragment = "1.7.0-alpha07"
 immutable-collections = "0.3.6"
 junit4 = "4.13.2"
 junit = "5.10.1"
-viewmodel = "2.7.0-alpha03"
+viewmodel = "2.7.0-rc01"
 ksp = "1.9.20-1.0.14"
 material = "1.11.0-beta01"
 room = "2.6.0"
