--- a/gradle.properties
+++ b/gradle.properties
@@ -25,6 +25,7 @@ android.nonTransitiveRClass=true
 org.gradle.caching=true
 org.gradle.parallel=true
 org.gradle.configureondemand=true
+org.gradle.configuration-cache=true
 
 kotlin.jvm.target.validation.mode = error
 
