--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,7 +14,7 @@ androidx-junit = "1.2.0-alpha02"
 compose-compiler = "1.5.7"
 compose-material3 = "1.2.0-beta01"
 compose-ui = "1.6.0-beta03"
-coroutines = "1.8.0-RC"
+coroutines = "1.8.0-RC2"
 dagger = "2.49"
 detekt = "1.23.4"
 detekt-compose-plugin = "0.3.5"
