--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,7 +12,7 @@ androidx-appcompat = "1.7.0-alpha03"
 androidx-core = "1.13.0-alpha04"
 androidx-junit = "1.2.0-alpha03"
 compose-compiler = "1.5.7"
-compose-material3 = "1.2.0-beta01"
+compose-material3 = "1.2.0-rc01"
 compose-ui = "1.6.0-beta03"
 coroutines = "1.8.0-RC2"
 dagger = "2.50"
