--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,7 +13,7 @@ androidx-core = "1.13.0-alpha04"
 androidx-junit = "1.2.0-alpha03"
 compose-compiler = "1.5.7"
 compose-material3 = "1.2.0-rc01"
-compose-ui = "1.6.0-beta03"
+compose-ui = "1.7.0-alpha01"
 coroutines = "1.8.0-RC2"
 dagger = "2.50"
 detekt = "1.23.4"
