--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,7 +12,7 @@ androidx-appcompat = "1.7.0-rc01"
 androidx-core = "1.14.0-alpha01"
 androidx-junit = "1.2.0-beta01"
 compose-compiler = "1.5.10"
-compose-material3 = "1.2.0"
+compose-material3 = "1.3.0-beta01"
 compose-ui = "1.7.0-alpha03"
 coroutines = "1.8.0"
 dagger = "2.50"
