--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,7 +13,7 @@ androidx-core = "1.14.0-alpha01"
 androidx-junit = "1.2.0-beta01"
 compose-compiler = "1.5.10"
 compose-material3 = "1.3.0-beta01"
-compose-ui = "1.7.0-alpha03"
+compose-ui = "1.7.0-beta01"
 coroutines = "1.8.0"
 dagger = "2.50"
 detekt = "1.23.5"
