--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,7 +3,7 @@
 agp = "8.4.1"
 compileSdk = "34"
 java = "21"
-kotlin = "1.9.22"
+kotlin = "2.0.0"
 minSdk = "25"
 targetSdk = "34"
 
@@ -11,7 +11,6 @@ targetSdk = "34"
 androidx-appcompat = "1.7.0-rc01"
 androidx-core = "1.14.0-alpha01"
 androidx-junit = "1.2.0-beta01"
-compose-compiler = "1.5.10"
 compose-material3 = "1.3.0-beta01"
 compose-ui = "1.7.0-beta01"
 coroutines = "1.8.1"
@@ -25,7 +24,7 @@ junit4 = "4.13.2"
 junit = "5.11.0-M2"
 viewmodel = "2.8.0"
 kotest = "5.9.0"
-ksp = "1.9.22-1.0.17"
+ksp = "2.0.0-1.0.21"
 material = "1.13.0-alpha02"
 room = "2.7.0-alpha02"
 turbine = "1.1.0"
@@ -61,6 +60,7 @@ test-turbine = { module = "app.cash.turbine:turbine", version.ref = "turbine" }
 
 # :build-logic
 android-gradle = { module = "com.android.tools.build:gradle", version.ref = "agp" }
+compose-compiler-gradle = { module = "org.jetbrains.kotlin:compose-compiler-gradle-plugin", version.ref = "kotlin"}
 ksp-gradle = { module = "com.google.devtools.ksp:com.google.devtools.ksp.gradle.plugin", version.ref = "ksp" }
 kotlin-gradle = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
 detekt-gradle = { module = "io.gitlab.arturbosch.detekt:detekt-gradle-plugin", version.ref = "detekt" }
@@ -74,6 +74,7 @@ room = ["room-ktx", "room-runtime"]
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 android-library = { id = "com.android.library", version.ref = "agp" }
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
