--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,7 +3,7 @@
 agp = "8.4.1"
 compileSdk = "34"
 java = "21"
-kotlin = "2.0.0"
+kotlin = "2.0.20-Beta1"
 minSdk = "25"
 targetSdk = "34"
 
@@ -24,7 +24,7 @@ junit4 = "4.13.2"
 junit = "5.11.0-M2"
 viewmodel = "2.8.0"
 kotest = "5.9.0"
-ksp = "2.0.0-1.0.21"
+ksp = "2.0.20-Beta1-1.0.22"
 material = "1.13.0-alpha02"
 room = "2.7.0-alpha02"
 turbine = "1.1.0"
