--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,7 +8,7 @@ minSdk = "25"
 targetSdk = "34"
 
 # libs
-androidx-appcompat = "1.7.0-rc01"
+androidx-appcompat = "1.7.0"
 androidx-core = "1.14.0-alpha01"
 androidx-junit = "1.2.0-beta01"
 compose-material3 = "1.3.0-beta01"
