--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,7 +10,7 @@ targetSdk = "35"
 # libs
 androidx-appcompat = "1.7.0"
 androidx-core = "1.15.0-alpha01"
-androidx-junit = "1.2.0-beta01"
+androidx-junit = "1.2.0"
 compose-material3 = "1.3.0-beta01"
 compose-ui = "1.7.0-beta01"
 coroutines = "1.8.1"
