--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,7 +13,7 @@ androidx-core = "1.15.0-alpha01"
 androidx-junit = "1.2.0"
 compose-material3 = "1.3.0-beta03"
 compose-ui = "1.7.0-beta03"
-coroutines = "1.8.1"
+coroutines = "1.9.0-RC"
 dagger = "2.51.1"
 detekt = "1.23.6"
 detekt-compose-plugin = "0.4.1"
