--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,7 +17,7 @@ coroutines = "1.9.0-RC"
 dagger = "2.51.1"
 detekt = "1.23.6"
 detekt-compose-plugin = "0.4.4"
-espresso = "3.6.0-beta01"
+espresso = "3.6.0"
 fragment = "1.8.0-beta01"
 immutable-collections = "0.3.7"
 junit4 = "4.13.2"
