--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,7 +18,7 @@ dagger = "2.51.1"
 detekt = "1.23.6"
 detekt-compose-plugin = "0.4.4"
 espresso = "3.6.0"
-fragment = "1.8.0-beta01"
+fragment = "1.8.0"
 immutable-collections = "0.3.7"
 junit4 = "4.13.2"
 junit = "5.11.0-M2"
