--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -79,3 +79,6 @@ detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
+
+# convention
+scoredroid-kotlin-module = { id = "org.scoredroid.kotlin-module" }
